Add blockbook and esplora to the block explorer lists

--- a/index.html
+++ b/index.html
@@ -1411,8 +1411,12 @@
 								<select class="form-control" id="coinjs_broadcast">
                  					<option value="chainz.cryptoid.info">chainz.cryptoid.info (MainNet)</option>
 									<option value="groestlsight.groestlcoin.org">groestlsight.groestlcoin.org (MainNet)</option>
+									<option value="esplora.groestlcoin.org">esplora.groestlcoin.org (MainNet)</option>
+									<option value="blockbook.groestlcoin.org">blockbook.groestlcoin.org (MainNet)</option>
 									<option value="chainz.cryptoid.info-test">chainz.cryptoid.info (TestNet)</option>
 									<option value="groestlsight-test.groestlcoin.org">groestlsight-test.groestlcoin.org (TestNet)</option>
+									<option value="esplora-test.groestlcoin.org">esplora-test.groestlcoin.org (TestNet)</option>
+									<option value="blockbook-test.groestlcoin.org">blockbook-test.groestlcoin.org (TestNet)</option>
 								</select>
 							</div>
 						</div>
@@ -1426,8 +1430,12 @@
 								<select class="form-control" id="coinjs_utxo">
                   					<option value="chainz.cryptoid.info">chainz.cryptoid.info (MainNet)</option>
 									<option value="groestlsight.groestlcoin.org">groestlsight.groestlcoin.org (MainNet)</option>
+									<option value="esplora.groestlcoin.org">esplora.groestlcoin.org (MainNet)</option>
+									<option value="blockbook.groestlcoin.org">blockbook.groestlcoin.org (MainNet)</option>
 									<option value="chainz.cryptoid.info-test">chainz.cryptoid.info (TestNet)</option>
 									<option value="groestlsight-test.groestlcoin.org">groestlsight-test.groestlcoin.org (TestNet)</option>
+									<option value="esplora-test.groestlcoin.org">esplora-test.groestlcoin.org (TestNet)</option>
+									<option value="blockbook-test.groestlcoin.org">blockbook-test.groestlcoin.org (TestNet)</option>
 								</select>
 							</div>
 						</div>
