--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
 								<p class="hideOverflow"><b>Transaction ID</b>: <span class="txId">?</span></p>
 								<p><b>Transaction Size</b>: <span class="txSize">0</span> bytes</p>
 								<p><b>Transaction Fee</b>: <span class="txFee">0.00000000</span></p>
-								<p><b>Satoshi per Byte</b>: <span class="feeSatByte">0</span></p>
+								<p><b>Gro per Byte</b>: <span class="feeSatByte">0</span></p>
 
 								<p>Based on your data and this recently mined transaction we recommend a fee of <b><span class="recommendedFee">0.00000000</span> GRS</b> to get it into the next few blocks</p>
 							</div>
@@ -1278,9 +1278,9 @@
 
 									<select id="sighashType" class="form-control">
 										<option value="1" rel="SIGHASH_ALL: Signs all the inputs and outputs, protecting everything against modification.">ALL (default)</option>
-										<option value="2" rel="SIGHASH_NONE: Signs all of the inputs but none of the outputs, allowing anyone to change where the satoshis are going unless other signatures using other signature hash flags protect the outputs.">NONE</option>
+										<option value="2" rel="SIGHASH_NONE: Signs all of the inputs but none of the outputs, allowing anyone to change where the gros are going unless other signatures using other signature hash flags protect the outputs.">NONE</option>
 										<option value="3" rel="SIGHASH_SINGLE: The only output signed is the one corresponding to this input, ensuring nobody can change your part of the transaction but allowing other signers to change their part of the transaction.">SINGLE</option>
-										<option value="129" rel="SIGHASH_ALL|SIGHASH_ANYONECANPAY: Signs all of the outputs but only this one input, it allows anyone to add or remove other inputs, so anyone can contribute additional satoshis but they cannot change how many satoshis are sent nor where they go.">ALL|ANYONECANPAY</option>
+										<option value="129" rel="SIGHASH_ALL|SIGHASH_ANYONECANPAY: Signs all of the outputs but only this one input, it allows anyone to add or remove other inputs, so anyone can contribute additional gros but they cannot change how many gros are sent nor where they go.">ALL|ANYONECANPAY</option>
 										<option value="130" rel="SIGHASH_NONE|SIGHASH_ANYONECANPAY: Signs only this one input and allows anyone to add or remove other inputs or outputs, so anyone who gets a copy of this input can spend it however they'd like.">NONE|ANYONECANPAY</option>
 										<option value="131" rel="SIGHASH_SINGLE|SIGHASH_ANYONECANPAY: Signs this one input and its corresponding output. Allows anyone to add or remove other inputs.">SINGLE|ANYONECANPAY</option>
 									</select>
