--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						<div class="row">
 							<div class="col-md-4">
 								<h3><span class="glyphicon glyphicon-piggy-bank"></span> Wallet</h3>
-								<p>Quick access to an <a href="#wallet">online wallet</a> where only you have access to your own private keys &amp; can <a href="#fees">calculate your own fee</a>!</p>
+								<p>Quick access to an <a href="#wallet">online wallet</a> where only you have access to your own private keys!</p>
 							</div>
 
 							<div class="col-md-4">
