--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							</div>
 
 							<div class="col-md-4">
-								<h3><span class="glyphicon glyphicon-bitcoin"></span> Raw Transactions</h3>
+								<h3><img src="images/rawtx.png"/> Raw Transactions</h3>
 								<p><a href="#newTransaction">Create</a>, <a href="#verify">verify</a>, <a href="#sign">sign</a> and <a href="#broadcast">broadcast</a> custom raw transactions online with advanced features and minimal effort!</p>
 							</div>
 						</div>
